--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-	<html>
-	  <head>
-	    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-	    <script type="text/javascript">
-	      google.charts.load('current', {packages: ['corechart', 'line']});
+oogle.charts.load('current', {packages: ['corechart', 'line']});
 	google.charts.setOnLoadCallback(drawBasic);
 
 	function drawBasic() {
@@ -18,28 +14,55 @@
 	      ]);
 
 	      var options = {
+       legend:{ 
+       textStyle: 
+       {
+       color: '#454545', 
+       fontSize: '12'
+       }
+       },
+	      	 colors:['#91d7f2'],backgroundColor: '#F4FFF9',
+	      	chart: {
+          title: 'Box Office Earnings in First Two Weeks of Opening',
+          subtitle: 'in millions of dollars (USD)'
+        },
 	        hAxis: {
-	          title: 'Time'
+	          title: 'Time',
+           gridlines:{
+           color: '#F4FFF9'
+           },
+            minorGridlines:{
+            	color: '#F4FFF9'
+            },
+	           titleTextStyle: {
+   					 color: '#454545',
+             italic: 'false',
+             fontSize:'20'
+  					},
+       			 textStyle: {
+             color:'#454545'
+             }
 	        },
 	        vAxis: {
-	          title: 'Popularity'
-	        }
+	          title: 'Order',
+	          gridlines:{
+           color: '#F4FFF9'
+           },
+            minorGridlines:{
+            	color: '#F4FFF9'
+            },
+	           titleTextStyle: {
+   					 color: '#454545',
+             italic: 'false',
+             fontSize:'20'
+	        },
+          textStyle: {
+             color:'#454545'
+             }
+          }
 	      };
 
 	      var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
 
 	      chart.draw(data, options);
 	    }
-	    </script>
-	    <style type="text/css">
-	    	.graph
-	    	{
-	    		width: 100%;
-	    		height: 500px;
-	    	}
-	    </style>
-	  </head>
-	  <body>
-	    <div id="chart_div" class="graph"></div>
-	  </body>
-	</html>
