--- a/index.html
+++ b/index.html
@@ -2,80 +2,84 @@
 	  <head>
 	    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	    <script type="text/javascript">
-		    google.charts.load('current', {packages: ['corechart', 'line']});
-	google.charts.setOnLoadCallback(drawBasic);
+		      google.charts.load('current', {packages: ['corechart', 'line']});
+    google.charts.setOnLoadCallback(drawBasic);
 
-	function drawBasic() {
+    function drawBasic() {
 
-	      var data = new google.visualization.DataTable();
-	      data.addColumn('number', 'X');
-	      data.addColumn('number', 'Dogs');
+          var data = new google.visualization.DataTable();
+          data.addColumn('number', 'X');
+          data.addColumn('number', 'Dogs');
 
-	      data.addRows([
-	        [0, 0],   [1, 10],  [2, 23],  [3, 17],  [4, 18],  [5, 9],
-	        [6, 11],  [7, 27],  [8, 33],  [9, 40],  [10, 32], [11, 35],
-	        [12, 30], [13, 40]
-	      ]);
+          data.addRows([
+            [0, 0],   [1, 10],  [2, 23],  [3, 17],  [4, 18],  [5, 9],
+            [6, 11],  [7, 27],  [8, 33],  [9, 40],  [10, 32], [11, 35],
+            [12, 30], [13, 40]
+          ]);
 
-	      var options = {
-       legend:{ 
-       textStyle: 
-       {
-       color: '#454545', 
-       fontSize: '12'
-       }
-       },
-	      	 colors:['#91d7f2'],backgroundColor: '#F4FFF9',
-	      	chart: {
-          title: 'Box Office Earnings in First Two Weeks of Opening',
-          subtitle: 'in millions of dollars (USD)'
-        },
-	        hAxis: {
-	          title: 'Time',
-           gridlines:{
-           color: '#F4FFF9'
-           },
-            minorGridlines:{
-            	color: '#F4FFF9'
+          var options = {
+          fontSize:'14',
+         legend:{ 
+         textStyle: 
+         {
+         color: '#454545', 
+         fontSize: '12'
+         }
+         },
+             colors:['#91d7f2'],backgroundColor: '#F4FFF9',
+            chart: {
+            title: 'Box Office Earnings in First Two Weeks of Opening',
+            subtitle: 'in millions of dollars (USD)'
+          },
+          
+            hAxis: {
+            textPosition: 'out',
+              title: 'Time',
+             gridlines:{
+             color: '#F4FFF9',
+             },
+              minorGridlines:{
+                color: '#F4FFF9'
+              },
+               titleTextStyle: {
+               color: '#454545',
+               italic: 'false',
+               fontSize:'14'
+              },
+               textStyle: {
+               color:'#454545',
+               
+               }
             },
-	           titleTextStyle: {
-   					 color: '#454545',
-             italic: 'false',
-             fontSize:'20'
-  					},
-       			 textStyle: {
-             color:'#454545'
-             }
-	        },
-	        vAxis: {
-	          title: 'Order',
-	          gridlines:{
-           color: '#F4FFF9'
-           },
-            minorGridlines:{
-            	color: '#F4FFF9'
+            vAxis: {
+              title: 'Order',
+              gridlines:{
+             color: '#F4FFF9'
+             },
+              minorGridlines:{
+                color: '#F4FFF9'
+              },
+               titleTextStyle: {
+               color: '#454545',
+               italic: 'false',
+               fontSize:'14'
             },
-	           titleTextStyle: {
-   					 color: '#454545',
-             italic: 'false',
-             fontSize:'20'
-	        },
-          textStyle: {
-             color:'#454545'
-             }
-          }
-	      };
+            textStyle: {
+               color:'#454545'
+               }
+            }
+          };
 
-	      var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+          var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
 
-	      chart.draw(data, options);
-	    }
+          chart.draw(data, options);
+        }
 	    </script>
 	    <style type="text/css">
 	    	.graph
 	    	{
-	    		width: 100%;
-	    		height: 500px;
+	    		width: 95%;
+	    		height: 550px;
 
 	    	}
 	    </style>
