--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           ]);
 
           var options = {
+          	title:'SALES GRAPH',
+          	titlePosition: 'out',
           fontSize:'20',
          legend:{ 
          	position: 'bottom',
@@ -70,6 +72,7 @@
                color:'#454545'
                }
             }
+
           };
 
           var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
