--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           var options = {
           	title:'SALES GRAPH',
           	titlePosition: 'out',
+          	titleTextStyle:{
+          		color: '#000'
+          	},
           fontSize:'20',
          legend:{ 
          	position: 'bottom',
